--- a/src/ChatInbox/wwwroot/css/Chat.css
+++ b/src/ChatInbox/wwwroot/css/Chat.css
@@ -1,17 +1,74 @@
 ﻿#ChatInbox {
-
+    
 }
 
-/* Contacts */
+/* Profile */
+#ChatInbox #Profile {
+    padding-left: 0;
+    padding-right: 0;
+    height: 100vh;
+    display: flex;
+}
 
-#ChatInbox #ContactsSection {
+#ChatInbox #Profile .profile {
+    padding: 0.4em 0.4em 0.4em 0.4em;
+    border-bottom: 1px solid #00000011;
+    background-color: #CCCCFF;
+    display: flex;
+}
+
+#ChatInbox #Profile .profile .image {
+    width: 48px;
+    height: 48px;
+    background-color: #00000011;
+    border-radius: 50%;
+}
+
+#ChatInbox #Profile .profile .name {
+    font-weight: bold;
+    font-size: 22px;
+    padding-left: 5px;
+    line-height: 44px;
+}
+
+/* Search */
+
+
+/* Contacts */
+#ChatInbox #Profile #ContactsSection {
     padding-left: 0;
     padding-right: 0;
     border-left: 1px dotted #00000022;
     border-right: 1px dotted #00000022;
+    height: 90vh;
 }
 
-#ChatInbox #ContactsSection .contact {
+#ChatInbox #Profile #ContactsSection #Search {
+    margin: 0;
+}
+
+#ChatInbox #Profile #ContactsSection #Search.input-group {
+    border-bottom: 1px solid #00000011;
+}
+
+#ChatInbox #Profile #ContactsSection #Search.input-group input {
+    border: none;
+    border-radius: 0;
+    padding-left: 26px;
+
+    transition: background-color 0.09s ease-out;
+}
+
+#ChatInbox #Profile #ContactsSection #Search.input-group i {
+    display: block;
+    position: absolute;
+    left: 6px;
+    top: 11px;
+    color: #00000033;
+    z-index: 2;
+}
+
+#ChatInbox #Profile #ContactsSection .contact {
     cursor: pointer;
     border-bottom: 1px dotted #00000022;
     padding: 0.4em;
@@ -19,15 +76,15 @@
     transition: background-color 0.09s ease-out;
 }
 
-#ChatInbox #ContactsSection .contact:hover {
+#ChatInbox #Profile #ContactsSection .contact:hover {
     background-color: #00000011;
 }
 
-#ChatInbox #ContactsSection .contact .header {
+#ChatInbox #Profile #ContactsSection .contact .header {
 
 }
 
-#ChatInbox #ContactsSection .contact .header .image {
+#ChatInbox #Profile #ContactsSection .contact .header .image, #ChatInbox #Profile #ContactsSection .profile .image {
     width: 24px;
     height: 24px;
     display: inline-block;
@@ -35,12 +92,11 @@
     background-color: #00000022;
 }
 
-#ChatInbox #ContactsSection .contact .header .name {
+#ChatInbox #Profile #ContactsSection .contact .header .name, #ChatInbox #Profile #ContactsSection .profile .name {
     display: inline-block;
-    font-weight: bold;
 }
 
-#ChatInbox #ContactsSection .contact .preview {
+#ChatInbox #Profile #ContactsSection .contact .preview {
     
 }
 
@@ -48,11 +104,16 @@
 #ChatInbox #MessageSection {
     padding-left: 0;
     padding-right: 0;
+    width: 100%;
+    height: 100vh;
+    border-right: 1px dotted #00000011;
 }
 
 #ChatInbox #MessageSection #Messages {
-    padding: 0 24px;
+    padding: 0 20px;
     width: 100%;
+    height: 75%;
+    overflow-y: visible;
 }
 
 #ChatInbox #MessageSection #Messages .message {
@@ -62,20 +123,41 @@
     break-before: always;
 }
 
+#ChatInbox #MessageSection #Messages .message.self {
+    margin-left: auto;
+}
+
+#ChatInbox #MessageSection #Messages .message .details {
+    padding: 2px 2px 0 2px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8em;
+}
+
+#ChatInbox #MessageSection #Messages .message .details .time {
+    font-weight: 400;
+    text-align: left;
+}
+
+#ChatInbox #MessageSection #Messages .message .details .time {
+    font-size: 0.8em;
+    font-weight: 400;
+    text-align: left;
+    padding-top: 2px;
+}
+
+#ChatInbox #MessageSection #Messages .message.self .message-box {
+    background-color: #CCCCFF;
+}
+
+#ChatInbox #MessageSection #Messages .message.other .message-box {
+    background-color: #88FF88;
+}
+
 #ChatInbox #MessageSection #Messages .message .message-box{
     border-radius: 10px;
     padding: 8px;
     margin: 18px 0;
-}
-
-#ChatInbox #MessageSection #Messages .message .message-box.self {
-    left: 0;
-    background-color: #CCCCFF;
-}
-
-#ChatInbox #MessageSection #Messages .message .message-box.other {
-    right: 0;
-    background-color: #88FF88;
 }
 
 #ChatInbox #MessageSection #Messages .message .message-box .time {
@@ -83,9 +165,46 @@
 }
 
 #ChatInbox #MessageSection #Messages .message .message-box .content {
-
+    line-height: 22px;
+    word-break: break-word;
+    text-align: justify;
 }
 
 #ChatInbox #MessageSection #Messages .message .message-box .status {
 
+}
+
+/* Message input */
+#ChatInbox #MessageSection #InputField {
+    width: 100%;
+    height: 20%;
+    padding-top: 15px;
+    border-top: 1px dotted #00000011;
+}
+
+#ChatInbox #MessageSection #InputField .toolpanel {
+    
+}
+
+#ChatInbox #MessageSection #InputField .content {
+    height: 100%;
+}
+
+#ChatInbox #MessageSection #InputField .content .form-group {
+    height: 100%;
+    margin-bottom: 0;
+}
+
+#ChatInbox #MessageSection #InputField .content #msg-input {
+    width: 100%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    resize: none;
+}
+
+#ChatInbox #MessageSection #InputField .content #msg-send {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    min-width: 100px;
+    max-width: 30%;
 }
