--- a/src/ChatInbox/Views/Shared/_Layout.cshtml
+++ b/src/ChatInbox/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://kit.fontawesome.com/3ddf8f3d07.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@@popperjs/core@2.0.0-rc.2"></script>
 </head>
 <body>
     @*<header>
