--- a/src/ChatInbox/wwwroot/css/Chat.css
+++ b/src/ChatInbox/wwwroot/css/Chat.css
@@ -1,5 +1,5 @@
 ﻿#ChatInbox {
-    
+    background-color: #EAEEEC;
 }
 
 /* Profile */
@@ -13,7 +13,7 @@
 #ChatInbox #Profile .profile {
     padding: 0.4em 0.4em 0.4em 0.4em;
     border-bottom: 1px solid #00000011;
-    background-color: #CCCCFF;
+    background-color: #3397D6;
     display: flex;
 }
 
@@ -55,6 +55,7 @@
     border: none;
     border-radius: 0;
     padding-left: 26px;
+    z-index: 0;
 
     transition: background-color 0.09s ease-out;
 }
@@ -132,6 +133,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 0.8em;
+    height: 17px;
 }
 
 #ChatInbox #MessageSection #Messages .message .details .time {
@@ -147,16 +149,16 @@
 }
 
 #ChatInbox #MessageSection #Messages .message.self .message-box {
-    background-color: #CCCCFF;
+    background-color: #3397D6;
 }
 
 #ChatInbox #MessageSection #Messages .message.other .message-box {
-    background-color: #88FF88;
+    background-color: #F6AE50;
 }
 
 #ChatInbox #MessageSection #Messages .message .message-box{
     border-radius: 10px;
-    padding: 8px;
+    padding: 4px 8px 8px 8px;
     margin: 18px 0;
 }
 
@@ -170,8 +172,12 @@
     text-align: justify;
 }
 
-#ChatInbox #MessageSection #Messages .message .message-box .status {
+#ChatInbox #MessageSection #Messages .message .message-box .status.l {
+    color: #FFFFFF55;
+}
 
+#ChatInbox #MessageSection #Messages .message .message-box .status.h {
+    color: #FFFFFF77;
 }
 
 /* Message input */
@@ -179,15 +185,16 @@
     width: 100%;
     height: 20%;
     padding-top: 15px;
-    border-top: 1px dotted #00000011;
+    border-top: 1px dotted #00000022;
 }
 
 #ChatInbox #MessageSection #InputField .toolpanel {
-    
+    width: 100%;
+    height: 20%;
 }
 
 #ChatInbox #MessageSection #InputField .content {
-    height: 100%;
+    height: 80%;
 }
 
 #ChatInbox #MessageSection #InputField .content .form-group {
@@ -200,6 +207,7 @@
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     resize: none;
+    z-index: 2;
 }
 
 #ChatInbox #MessageSection #InputField .content #msg-send {
@@ -207,4 +215,5 @@
     border-bottom-left-radius: 0;
     min-width: 100px;
     max-width: 30%;
+    z-index: 1;
 }
