Improved chat and message display. Added toolbar icons.

--- a/src/ChatInbox/Views/Home/Index.cshtml
+++ b/src/ChatInbox/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     <img src="" />
                 </div>
                 <div class="name">
-                    PotatoChat
+                    Nome da Pessoa
                 </div>
             </div>
         </div>
@@ -88,9 +88,11 @@
         </div>
         <div id="InputField" class="col-12">
             <!-- Toolbar -->
-            <div class="toolpanel">
-                <ul>
-
+            <div class="toolpanel" style="text-align: center;">
+                <ul class="d-flex justify-content-around">
+                    <li class="i-emoji"><i class="fas fa-laugh-beam"></i></li>
+                    <li class="i-gallery"><i class="fas fa-image"></i></li>
+                    <li>Adesivos</li>
                 </ul>
             </div>
             <!-- Message Input -->
