--- a/src/ChatInbox/wwwroot/css/Chat.css
+++ b/src/ChatInbox/wwwroot/css/Chat.css
@@ -1,4 +1,16 @@
-﻿#ChatInbox {
+﻿body {
+    overflow: hidden;
+}
+
+.tooltip .tooltip-inner {
+    background-color: #00000044;
+}
+
+.tooltip .arrow:before {
+    border-left-color: #00000044;
+}
+
+#ChatInbox {
     background-color: #EAEEEC;
 }
 
@@ -15,6 +27,7 @@
     border-bottom: 1px solid #00000011;
     background-color: #3397D6;
     display: flex;
+    cursor: default;
 }
 
 #ChatInbox #Profile .profile .image {
@@ -22,13 +35,15 @@
     height: 48px;
     background-color: #00000011;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 #ChatInbox #Profile .profile .name {
     font-weight: bold;
     font-size: 22px;
-    padding-left: 5px;
-    line-height: 44px;
+    padding-left: 7px;
+    line-height: 46px;
+    color: #EFEFEF;
 }
 
 /* Search */
@@ -111,10 +126,18 @@
 }
 
 #ChatInbox #MessageSection #Messages {
-    padding: 0 20px;
+    padding: 0 20px 132px 20px;
     width: 100%;
-    height: 75%;
-    overflow-y: visible;
+    height: 100vh;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    cursor: default;
+}
+
+#ChatInbox #MessageSection #Messages::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 #ChatInbox #MessageSection #Messages .message {
@@ -126,6 +149,7 @@
 
 #ChatInbox #MessageSection #Messages .message.self {
     margin-left: auto;
+    text-align: right;
 }
 
 #ChatInbox #MessageSection #Messages .message .details {
@@ -157,6 +181,7 @@
 }
 
 #ChatInbox #MessageSection #Messages .message .message-box{
+    display: inline-block;
     border-radius: 10px;
     padding: 4px 8px 8px 8px;
     margin: 18px 0;
@@ -172,6 +197,10 @@
     text-align: justify;
 }
 
+#ChatInbox #MessageSection #Messages .message .message-box .status {
+    padding-left: 12px;
+}
+
 #ChatInbox #MessageSection #Messages .message .message-box .status.l {
     color: #FFFFFF55;
 }
@@ -183,18 +212,49 @@
 /* Message input */
 #ChatInbox #MessageSection #InputField {
     width: 100%;
-    height: 20%;
-    padding-top: 15px;
+    height: 132px;
     border-top: 1px dotted #00000022;
+    padding-bottom: 15px;
+    position: sticky;
+    bottom: 0;
+    background-color: #EAEEEC;
 }
 
 #ChatInbox #MessageSection #InputField .toolpanel {
     width: 100%;
-    height: 20%;
+    height: 30px;
+    margin: 4px 0;
+}
+
+#ChatInbox #MessageSection #InputField .toolpanel ul {
+    height: 100%;
+}
+
+#ChatInbox #MessageSection #InputField .toolpanel ul, #ChatInbox #MessageSection #InputField .toolpanel ul li {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+}
+
+#ChatInbox #MessageSection #InputField .toolpanel ul li {
+    cursor: pointer;
+    display: inline-block;
+    font-size: 22px;
+    line-height: 1.3em;
+}
+
+#ChatInbox #MessageSection #InputField .toolpanel ul li.i-emoji {
+    color: #26C21A;
+}
+
+#ChatInbox #MessageSection #InputField .toolpanel ul li.i-gallery {
+    color: #5175e9;
 }
 
 #ChatInbox #MessageSection #InputField .content {
-    height: 80%;
+    display: block;
+    height: 82px;
 }
 
 #ChatInbox #MessageSection #InputField .content .form-group {
@@ -203,6 +263,7 @@
 }
 
 #ChatInbox #MessageSection #InputField .content #msg-input {
+    height: 100%;
     width: 100%;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
